--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_dotenv: ^5.2.1
   flutter_secure_storage: ^9.2.3
   flutter_svg: ^2.0.16
   fluttertoast: ^8.2.10
