--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ flutter_icons:
 flutter:
   uses-material-design: true
   assets:
+    - .env
     - assets/
     - assets/images/empty_transaction.png
     - assets/images/login_bottom_tomatto_image.png
