--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,20 @@ dependencies:
   d_session: ^0.0.3
   firebase_auth: ^5.3.4
   firebase_core: ^3.9.0
+  firebase_messaging: ^15.2.2
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
   flutter_dotenv: ^5.2.1
+  flutter_local_notifications: ^18.0.1
   flutter_secure_storage: ^9.2.3
   flutter_svg: ^2.0.16
   fluttertoast: ^8.2.10
   gap: ^3.0.1
   google_fonts: ^6.2.1
+  googleapis: ^13.2.0
+  googleapis_auth: ^1.6.0
+  http: ^1.3.0
   intl: ^0.20.1
   uuid: ^4.5.1
 
