--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   googleapis_auth: ^1.6.0
   http: ^1.3.0
   intl: ^0.20.1
+  permission_handler: ^11.3.1
   uuid: ^4.5.1
 
 dev_dependencies:
