--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/images/login_top_palm_oil_image.png"
+  adaptive_icon_foreground: "assets/images/login_top_palm_oil_image.png"
   adaptive_icon_background: "#FFFFFF"
 
 #flutter clean
