--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
+  flutter_datetime_picker_plus: ^2.2.0
   flutter_dotenv: ^5.2.1
   flutter_local_notifications: ^18.0.1
   flutter_secure_storage: ^9.2.3
